addons/monitoring/nginx/alert-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-prometheus-alertmanager
  namespace: kubernetes-monitoring
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: monitoring-prometheus
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - path: /prometheus-alert(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: monitoring-prometheus-alertmanager
            port:
              number: 9093
