addons/monitoring/nginx/prometheus-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-prometheus-server
  namespace: kubernetes-monitoring
  annotations:
    nginx.ingress.kubernetes.io/auth-secret: monitoring-prometheus
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: monitoring-prometheus-server
            port:
              number: 80
